--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -13,21 +13,17 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Touch CSV
-        run: |
-          touch "${{ inputs.path }}/log.csv"
       - name: Configure Git
         if: github.event.pull_request.merged == true
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git fetch
-      - name: Fetch PR information
+          git checkout ${{ github.head_ref }}
+      - name: Get date
         if: github.event.pull_request.merged == true
         run: |
-          COMMIT_ID=$(echo ${{github.event.pull_request.head.sha}} | cut -c1-7)
-          DATA=$(date -u +'%d-%m-%Y %a')
-          git checkout ${{ github.head_ref }}
+          DATE=$(date -u +'%d-%m-%Y %a')
       - name: Write changelog
         if: github.event.pull_request.merged == true
         env:
@@ -36,8 +32,9 @@ jobs:
           PR_AUTHOR: "${{ github.triggering_actor }}"
           PR_REVIEWER: "${{ github.event.pull_request.requested_reviewers }}"
         run: |
+          touch "${{ inputs.path }}/log.csv"
           OLD_CONTENT=$(cat "${{ inputs.path }}/log.csv")
-          NEW_CONTENT="$PR_NUMBER,$PR_TITLE,$PR_AUTHOR,$PR_REVIEWER,$DATA\n$OLD_CONTENT"
+          NEW_CONTENT="$PR_NUMBER,$PR_TITLE,$PR_AUTHOR,$PR_REVIEWER,$DATE\n$OLD_CONTENT"
           echo -e "$NEW_CONTENT" > "${{ inputs.path }}/log.csv"
       - name: Commit and push changelog
         if: github.event.pull_request.merged == true
