--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -40,13 +40,13 @@ jobs:
       - name: Replace usernames
         if: github.event.pull_request.merged == true
         run: |
-          sed -i -e "s/${{ UID_ANTONIO }}/Antonio Oseliero/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_ALESSIO }}/Alessio Banzato/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_GIOVANNI }}/Giovanni Gardin/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_MATTIA }}/Mattia Todesco/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_RICCARDO }}/Riccardo Carraro/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_ROSARIO }}/Rosario Zaccone/g" "${{ inputs.path }}/log.csv"
-          sed -i -e "s/${{ UID_SILVIO }}/Silvio Nardo/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_ANTONIO }}/Antonio Oseliero/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_ALESSIO }}/Alessio Banzato/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_GIOVANNI }}/Giovanni Gardin/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_MATTIA }}/Mattia Todesco/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_RICCARDO }}/Riccardo Carraro/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_ROSARIO }}/Rosario Zaccone/g" "${{ inputs.path }}/log.csv"
+          sed -i -e "s/${{ vars.UID_SILVIO }}/Silvio Nardo/g" "${{ inputs.path }}/log.csv"
       - name: Commit and push changelog
         if: github.event.pull_request.merged == true
         run: |
