--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -20,6 +20,9 @@ jobs:
           git config --global user.name "GitHub Actions"
           git fetch
           git checkout ${{ github.head_ref }}
+      - name: Create changelog if missing
+        run: |
+          touch "${{ inputs.path }}/log.csv"
       - name: Get date
         if: github.event.pull_request.merged == true
         run: |
@@ -32,7 +35,6 @@ jobs:
           PR_AUTHOR: "${{ github.triggering_actor }}"
           PR_REVIEWER: 'ggardin' #"${{ github.event.pull_request.requested_reviewers || '' }}"
         run: |
-          touch "${{ inputs.path }}/log.csv"
           OLD_CONTENT=$(cat "${{ inputs.path }}/log.csv")
           NEW_CONTENT="$PR_NUMBER,$PR_TITLE,$PR_AUTHOR,$PR_REVIEWER,$DATE"
           FILE_CONTENT="$NEW_CONTENT\n$OLD_CONTENT"
