--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -9,59 +9,26 @@ on:
       - '!**template.typ'
 
 jobs:
-  common:
-    runs-on: ubuntu-latest
-    outputs:
-      FILE_PATH: '${{ steps.path.outputs.FILE_PATH }}'
-      FILE_NAME: '${{ steps.name.outputs.FILE_NAME }}'
-    steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v4
-      - name: Get changed file
-        id: files
-        uses: tj-actions/changed-files@v40
-        with:
-          files: |
-             **.typ
-      - name: Extract path
-        id: path
-        run: |
-          FILES="${{ steps.files.outputs.all_changed_files }}"
-          echo "FILE_PATH=$(dirname "$FILES")" >> $GITHUB_OUTPUT
-      - name: Extract name w/o extension
-        id: name
-        run: |
-          FILES="${{ steps.files.outputs.all_changed_files }}"
-          echo "FILE_NAME=$(basename "${FILES}" .typ)" >> $GITHUB_OUTPUT
-      - name: Output to summary
-        run: |
-          echo "::notice::Modified files: ${{ steps.files.outputs.all_changed_files }}"
-          echo "::notice::Path: ${{ steps.path.outputs.FILE_PATH }}"
-          echo "::notice::File: ${{ steps.name.outputs.FILE_NAME }}"
-      - name: Check number of changed files
-        run: |
-          if [[ "${{ steps.path.outputs.FILE_PATH }}" == *".typ"* ]]; then
-            echo "::error::More than one Typst source have been modified. Aborting."
-            exit 1
-          fi
+  fetch:
+    uses: ${{ github.repository }}/.github/workflows/info_fetcher.yml@src
 
   log:
-    needs: common
+    needs: fetch
     uses: ${{ github.repository }}/.github/workflows/changelogger.yml@src
     with:
-      path: '${{ needs.common.outputs.FILE_PATH }}'
+      path: '${{ needs.fetch.outputs.file_path }}'
 
   compile:
-    needs: [common, log]
+    needs: [fetch, log]
     uses: ${{ github.repository }}/.github/workflows/compiler.yml@src
     with:
-      name: '${{ needs.common.outputs.FILE_NAME }}'
-      path: '${{ needs.common.outputs.FILE_PATH }}'
+      name: '${{ needs.fetch.outputs.file_name }}'
+      path: '${{ needs.fetch.outputs.file_path }}'
 
   publish:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [common, compile]
+    needs: [fetch, compile]
     env:
       TARGET_BRANCH: 'main'
 
@@ -76,23 +43,23 @@ jobs:
       - name: Update path
         id: publish_path
         run: |
-          echo "PUBLISH_PATH=$(dirname "${{ needs.common.outputs.FILE_PATH }}")" >> $GITHUB_OUTPUT
+          echo "PUBLISH_PATH=$(dirname "${{ needs.fetch.outputs.file_path }}")" >> $GITHUB_OUTPUT
       - name: Output
         run: |
-          echo "::notice::Old path: ${{ needs.common.outputs.FILE_PATH }}"
+          echo "::notice::Old path: ${{ needs.fetch.outputs.file_path }}"
           echo "::notice::New path: ${{ steps.publish_path.outputs.PUBLISH_PATH }}"
       - name: Remove older version
         run: |
           git checkout $TARGET_BRANCH
-          rm -f "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.common.outputs.FILE_NAME }}.pdf"
-          git rm --ignore-unmatch "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.common.outputs.FILE_NAME }}.pdf"
+          rm -f "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf"
+          git rm --ignore-unmatch "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf"
       - name: Grab document
         uses: actions/download-artifact@v3
         with:
-          name: '${{ needs.common.outputs.FILE_NAME }}.pdf'
+          name: '${{ needs.fetch.outputs.file_name }}.pdf'
           path: '${{ github.workspace }}/${{ steps.publish_path.outputs.PUBLISH_PATH }}'
       - name: Publish document
         run: |
-          git add "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.common.outputs.FILE_NAME }}.pdf"
-          git commit -am "Publish document ${{ needs.common.outputs.FILE_NAME }}.pdf"
+          git add "${{ steps.publish_path.outputs.PUBLISH_PATH }}/${{ needs.fetch.outputs.file_name }}.pdf"
+          git commit -am "Publish document ${{ needs.fetch.outputs.file_name }}.pdf"
           git push origin $TARGET_BRANCH
