--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -14,7 +14,7 @@ jobs:
 
   log:
     needs: fetch
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Create changelog if missing
         run: |
