--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Create changelog if missing
         run: |
+          pwd
+          sudo apt install tree
+          tree
           touch "${{ needs.fetch.outputs.file_path }}/log.csv"
 
   compile:
