--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -16,11 +16,22 @@ jobs:
     needs: fetch
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
+      - name: Configure Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git fetch
+          git checkout ${{ github.head_ref }}
       - name: Create changelog if missing
         run: |
-          pwd
-          ls
           touch "${{ needs.fetch.outputs.file_path }}/log.csv"
+      - name: Commit and push changelog
+        run: |
+          git add "${{ needs.fetch.outputs.file_path }}/log.csv"
+          git diff-index --quiet HEAD || git commit -m "Update changelog"
+          git push origin ${{ github.head_ref }}
 
   compile:
     needs: [fetch, log]
