--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Commit and push changelog
         run: |
           git add "${{ needs.fetch.outputs.file_path }}/log.csv"
-          git diff-index --quiet HEAD || git commit -m "Update changelog"
+          git commit -m "Aggiunti dettagli di rilascio"
           git push origin ${{ github.head_ref }}
