--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -3,30 +3,25 @@ name: Version handler
 on:
   workflow_call:
     inputs:
-      path:
+      file_path:
         type: string
         required: true
-      name:
+      file_name:
         type: string
         required: true
     outputs:
       version:
         description: "The new and updated version of the document"
-        value: ${{ jobs.fetch.outputs.updated_version }}
+        value: ${{ jobs.update.outputs.version }}
 
 jobs:
-  fetch:
-    name: Fetch changed file info
+  update:
+    name: Update document version
     runs-on: ubuntu-latest
     outputs:
-      updated_version: '${{ steps.version.outputs.VERSION }}'
+      version: '${{ steps.version.outputs.version }}'
 
     steps:
-      - name: Output version
-        id: version
-        run: |
-          echo "VERSION=v0" >> $GITHUB_OUTPUT
-
       - name: Set up Git repository
         uses: actions/checkout@v4
       - name: Set up Python
@@ -34,8 +29,8 @@ jobs:
         with:
           python-version: '3.10'
       - name: Run Python script
+        id: version
         run: |
-          cp .github/script.py ./
-          version=$(python script.py  "${{ needs.common.outputs.FILE_PATH }}" "${{ needs.common.outputs.FILE_NAME }}")
-          echo "$version" >> $GITHUB_OUTPUT
-          echo "::notice::Updated version: $version"
+          cp .github/scripts/file_version_handler.py ./
+          echo "VERSION=$(python file_version_handler.py "${{ inputs.file_path }}" "${{ inputs.file_name }}")" >> $GITHUB_OUTPUT
+          echo "::notice::Updated version: $VERSION"
