--- a/.github/workflows/typst_workflow.yml
+++ b/.github/workflows/typst_workflow.yml
@@ -37,8 +37,8 @@ jobs:
     needs: [fetch, log]
     uses: ggardin/Documenti/.github/workflows/compiler.yml@src
     with:
-      name: '${{ needs.fetch.outputs.file_name }}'
-      path: '${{ needs.fetch.outputs.file_path }}'
+      file_name: ${{ needs.fetch.outputs.file_name }}
+      file_path: ${{ needs.fetch.outputs.file_path }}
 
   publish:
     if: github.event.pull_request.merged == true
