--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -18,3 +18,9 @@
 
 'Norme di Progetto':
 - 'Norme di Progetto.*'
+
+'Analisi dei rischi'
+- 'Analisi dei rischi.*'
+
+'Piano di Progetto'
+- 'Piano di Progetto.*'
