--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -13,8 +13,8 @@ jobs:
     needs: fetch
     uses: ggardin/Documenti/.github/workflows/versioning.yml@src
     with:
-      path: ${{ needs.fetch.outputs.file_path }}
-      name: ${{ needs.fetch.outputs.file_name }}
+      file_path: ${{ needs.fetch.outputs.file_path }}
+      file_name: ${{ needs.fetch.outputs.file_name }}
 
   log:
     needs: [fetch, version]
