--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git fetch
-          git checkout ${{ github.head_ref }}
+        #  git fetch
+        #  git checkout ${{ github.head_ref }}
       - name: Get date
         id: date
         run: |
