--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-        #  git fetch
-        #  git checkout ${{ github.head_ref }}
+          git fetch
+          git checkout ${{ github.head_ref }}
       - name: Get date
         id: date
         run: |
@@ -57,8 +57,10 @@ jobs:
           sed -i -e "s/${{ vars.UID_SILVIO }}/Silvio Nardo/g" "${{ needs.fetch.outputs.file_path }}/log.csv"
       - name: Commit and push changelog
         run: |
-          git status
-          git checkout ${{ github.head_ref }}
           git add "${{ needs.fetch.outputs.file_path }}/log.csv"
+      - name: Commit
+        run: |
           git commit -m "Aggiunti dettagli di rilascio"
+      - name: Push
+        run: |
           git push origin ${{ github.head_ref }}
