--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -19,8 +19,8 @@
 'Norme di Progetto':
 - 'Norme di Progetto.*'
 
-'Analisi dei rischi'
+'Analisi dei rischi':
 - 'Analisi dei rischi.*'
 
-'Piano di Progetto'
+'Piano di Progetto':
 - 'Piano di Progetto.*'
