--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -27,7 +27,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git fetch
-          git checkout ${{ github.head_ref }}
+          git checkout ${{ github.event.pull_request.head.ref }}
       - name: Get date
         id: date
         run: |
@@ -58,9 +58,5 @@ jobs:
       - name: Commit and push changelog
         run: |
           git add "${{ needs.fetch.outputs.file_path }}/log.csv"
-      - name: Commit
-        run: |
           git commit -m "Aggiunti dettagli di rilascio"
-      - name: Push
-        run: |
-          git push origin HEAD:${{ github.head_ref }}
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
