Fix missing reviewer username

--- a/.github/workflows/changelogger.yml
+++ b/.github/workflows/changelogger.yml
@@ -38,7 +38,7 @@ jobs:
           PR_NUMBER: "${{ github.event.pull_request.number }}"
           PR_TITLE: "${{ github.event.pull_request.title }}"
           PR_AUTHOR: "${{ github.event.pull_request.user.login }}"
-          PR_REVIEWER: "${{ github.event.review.user.name }}"
+          PR_REVIEWER: "${{ github.event.review.user.login }}"
           DATE: "${{ steps.date.outputs.date }}"
         run: |
           OLD_CONTENT=$(cat "${{ needs.fetch.outputs.file_path }}/log.csv")
