--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -11,28 +11,37 @@ on:
         required: true
     outputs:
       version:
-        description: "The new and updated version of the document"
+        description: "The next and updated version of the document"
+        value: ${{ jobs.update.outputs.version }}
+      current_version:
+        description: "The current version of the document"
         value: ${{ jobs.update.outputs.version }}
 
 jobs:
   update:
-    name: Update document version
+    name: Compute versions
     runs-on: ubuntu-latest
     outputs:
+      current_version: '${{ steps.current.outputs.version }}'
       version: '${{ steps.version.outputs.version }}'
 
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
+      - name: Get current version
+        id: current
+        run: |
+          echo "VERSION=$(head -n2 "${{ inputs.file_path }}/${{ inputs.file_name }}.csv" | tail -n1 | cut -d',' -f1)" >> $GITHUB_OUTPUT
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Run Python script
+      - name: Compute next version
         id: version
         run: |
           cp .github/scripts/file_version_handler.py ./
           echo "VERSION=$(python file_version_handler.py "${{ inputs.file_path }}" "${{ inputs.file_name }}")" >> $GITHUB_OUTPUT
-      - name: Print version to summary
+      - name: Print versions to summary
         run: |
+          echo "::notice::Current version: ${{ steps.current.outputs.version }}"
           echo "::notice::Updated version: ${{ steps.version.outputs.version }}"
