--- a/.github/workflows/info_fetcher.yml
+++ b/.github/workflows/info_fetcher.yml
@@ -9,9 +9,9 @@ on:
       file_name:
         description: "The changed file name"
         value: ${{ jobs.fetch.outputs.file_name }}
-      current_version:
+      latest_version:
         description: "The current document version"
-        value: ${{ jobs.fetch.outputs.current_version }}
+        value: ${{ jobs.fetch.outputs.latest_version }}
 
 jobs:
   fetch:
@@ -20,7 +20,7 @@ jobs:
     outputs:
       file_path: '${{ steps.path.outputs.file_path }}'
       file_name: '${{ steps.name.outputs.file_name }}'
-      current_version: '${{ steps.version.outputs.current_version }}'
+      latest_version: '${{ steps.version.outputs.latest_version }}'
 
     steps:
       - name: Set up Git repository
@@ -41,15 +41,15 @@ jobs:
         run: |
           FILES="${{ steps.files.outputs.all_changed_files }}"
           echo "FILE_NAME=$(basename "${FILES}" .typ)" >> $GITHUB_OUTPUT
-      - name: Get current version
+      - name: Get latest version
         id: version
         run: |
-          echo "CURRENT_VERSION=$(head -n2 "${{ inputs.file_path }}/${{ inputs.file_name }}.csv" | tail -n1 | cut -d',' -f1)" >> $GITHUB_OUTPUT
+          echo "LATEST_VERSION=$(head -n2 "${{ inputs.file_path }}/${{ inputs.file_name }}.csv" | tail -n1 | cut -d',' -f1)" >> $GITHUB_OUTPUT
       - name: Output to summary
         run: |
           echo "::notice::Path: ${{ steps.path.outputs.file_path }}"
           echo "::notice::Name: ${{ steps.name.outputs.file_name }}"
-          echo "::notice::Name: ${{ steps.version.outputs.current_version }}"
+          echo "::notice::Name: ${{ steps.version.outputs.latest_version }}"
       - name: Check number of changed files
         run: |
           if [[ "${{ steps.path.outputs.file_path }}" == *".typ"* ]]; then
