--- a/.github/workflows/fetch_info.yml
+++ b/.github/workflows/fetch_info.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Get latest version
         id: version
         run: |
-          echo "LATEST_VERSION=$(head -n2 "${{ inputs.file_path }}/${{ inputs.file_name }}.csv" | tail -n1 | cut -d',' -f1)" >> $GITHUB_OUTPUT
+          echo "LATEST_VERSION=$(head -n2 "${{ steps.path.outputs.file_path }}/${{ steps.name.outputs.file_name }}.csv" | tail -n1 | cut -d',' -f1)" >> $GITHUB_OUTPUT
       - name: Output to summary
         run: |
           echo "::notice::Path: ${{ steps.path.outputs.file_path }}"
