Corretto escape dell'apostrofo

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,54 +2,54 @@
 
 # Milestones +++++++++++++++++++++++++++++++
 
-'Candidatura':
-- '1 - Candidatura/**'
+"Candidatura":
+- "1 - Candidatura/**"
 
-'RTB':
-- '2 - RTB/**'
+"RTB":
+- "2 - RTB/**"
 
-'CA':
-- '4 - CA/**'
+"CA":
+- "4 - CA/**"
 
-'PB':
-- '3 - PB/**'
+"PB":
+- "3 - PB/**"
 
 # Documents ++++++++++++++++++++++++++++++++
 
-'Analisi dei rischi':
-- 'Analisi dei rischi.*'
+"Analisi dei rischi":
+- "Analisi dei rischi.*"
 
-'Analisi dei requisiti':
-- 'Analisi dei requisiti.*'
+"Analisi dei requisiti":
+- "Analisi dei requisiti.*"
 
-'Glossario':
-- 'Glossario.*'
+"Glossario":
+- "Glossario.*"
 
-'Lettera di presentazione':
-- 'Lettera di presentazione.*'
+"Lettera di presentazione":
+- "Lettera di presentazione.*"
 
-'Manuale d\'uso':
-- 'Manuale d\'uso*.*'
+"Manuale d'uso":
+- "Manuale d'uso*.*"
 
-'Norme di Progetto':
-- 'Norme di Progetto.*'
+"Norme di Progetto":
+- "Norme di Progetto.*"
 
-'Piano di Progetto':
-- 'Piano di Progetto.*'
+"Piano di Progetto":
+- "Piano di Progetto.*"
 
-'Piano di qualifica':
-- 'Piano di qualifica.*'
+"Piano di qualifica":
+- "Piano di qualifica.*"
 
-'Specifica tecnica':
-- 'Specifica tecnica*.*'
+"Specifica tecnica":
+- "Specifica tecnica*.*"
 
-'Verbale esterno':
-- 'Verbali/Esterni/**'
+"Verbale esterno":
+- "Verbali/Esterni/**"
 
-'Verbale interno':
-- 'Verbali/Interni/**'
+"Verbale interno":
+- "Verbali/Interni/**"
 
 # Misc +++++++++++++++++++++++++++++++++++++
 
-'Actions':
-- '.github/**'
+"Actions":
+- ".github/**"
