Aggiornato e consolidato path per i verbali

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -43,11 +43,8 @@
 "Specifica tecnica":
 - "**/Specifica tecnica*.*"
 
-"Verbale esterno":
-- "**/Verbali/Esterni/**"
-
-"Verbale interno":
-- "**/Verbali/Interni/**"
+"Verbale":
+- "**/Verbali/**"
 
 # Misc +++++++++++++++++++++++++++++++++++++
 
