Aggiornata path documento Analisi dei Requisiti

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -19,8 +19,8 @@
 "Analisi dei rischi":
 - "**/Analisi dei rischi.*"
 
-"Analisi dei requisiti":
-- "**/Analisi dei requisiti.*"
+"Analisi dei Requisiti":
+- "**/Analisi dei Requisiti.*"
 
 "Glossario":
 - "**/Glossario.*"
